# GtsamStudyGroup

./: .gitignore  installation.md
test1/: CMakeLists.txt
tutorial1/: CMakeLists.txt  build_and_run.sh  viz_tutorial1.py
tutorial2/: CMakeLists.txt  build_and_run2.sh  viz_tutorial2.py
tutorial3/: CMakeLists.txt  build_and_run3.sh  viz_tutorial3.py
tutorial4/: CMakeLists.txt  build_and_run4.sh  tutorial4.cpp  tutorial4.csv  viz_tutorial4.py
